fix horizontal scroll

--- a/src/app/main/app.component.scss
+++ b/src/app/main/app.component.scss
@@ -4,6 +4,7 @@
 	padding-right: 20px;
 	display: block;
 	overflow: auto;
+	overflow-x: hidden;
 	user-select: none;
 
 	.messages-container {
